
===========
Changes log  
===========

@version-full@ (@release-date@)
[Bugs fixed]
[API changes]
[Enhancements] 

1.0 RC2 (2007-01-09)
[Bugs fixed]
 - Fixed minor bug with the URI parsing (query sign "?" inside fragment). 
   Contributed by Thierry Boileau.
 - Fixed bug in the dynamic invocation of custom handle*() methods in the Handler class.
 - Fixed bug with the directory listing generation in the method "getVariants" of class DirectoryResource. 
   Contributed by Sean Landis.

[API changes]
 - Added an XmlRepresentation, super class of DomRepresentation and SaxRepresentation
   that faciliates the evaluation of XPath expressions and manages a context namespaces.
 - Added Message.getEntityAsSax() and getEntityAsDom() methods.
 - Added org.restlet.util.NodeSet that facilitates the iteration over a DOM NodeList.
 - Split Representation class into a new Variant class (containing all metadata 
   properties) and into a lighter Representation class. Variant is a subclass of 
   Resource and Representation a subclass of Variant. Zero impact on existing code.
 - Changed getVariants() to return a List<Variant> instead of a List<Representation>. 
   Suggested by Sumit Lohia.
 - Added getRepresentation(Variant variant) : Representation return the full representation 
   for a variant. By default, it will return 'variant' in case it is already a  
   representation (instance of Representation class). Suggested by Sumit Lohia.
 - Renamed Representation.getValue() into getText() to be more precise about intent.
 - Handler.handle() now set the response status to 404 (Not Found) only if the target
   resource is null *and* if the response status is a success. Reported by Chris Battey.
 - Added MediaType.equals(Object, boolean ignoreParameters) to allow comparison without
   taking into account the parameters (useful for multipart forms for example, because
   they have a varying "boundary" parameter. Reported by Randy Layman.